--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamodb-locked-value",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "dist/index.js",
   "license": "MIT",
   "repository": {
@@ -21,7 +21,12 @@
     "build": "tsc index.ts --declaration --declarationMap --outDir dist",
     "pub": "yarn build && npm publish --access public"
   },
-  "files": ["dist", "index.ts", "package.json", "README.md"],
+  "files": [
+    "dist",
+    "index.ts",
+    "package.json",
+    "README.md"
+  ],
   "exports": {
     ".": {
       "import": {
