--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
+    "dynamodb-locked-value": "^1.2.0",
     "testcontainers": "^10.13.2",
     "typescript": "^5.6.2",
     "vitest": "^2.1.2"
